--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "homepage": "https://github.com/shimaore/spicy-action-user",
   "dependencies": {
+    "pouchdb": "^5.3.1",
     "seem": "^1.1.1"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "mocha": "^2.4.5"
   }
 }
