--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spicy-action-user",
-  "version": "2.0.0",
+  "version": "2.0.1-0",
   "description": "User parameters (locale,timezone) for spicy-action",
   "main": "index.js",
   "scripts": {
