--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/shimaore/spicy-action-user",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "debug": "^2.2.0",
     "pouchdb": "^5.4.5",
     "seem": "^2.0.0"
   },
