--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
   },
   "homepage": "https://github.com/shimaore/spicy-action-user",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "debug": "^2.3.3",
-    "pouchdb": "6.1.1",
-    "seem": "^2.0.0",
-    "shimaore-pouchdb": "6.1.1"
+    "body-parser": "^1.17.1",
+    "debug": "^3.0.0",
+    "pouchdb": "6.3.4",
+    "seem": "^2.0.0"
   },
   "devDependencies": {
-    "coffee-script": "^1.12.1",
-    "mocha": "^3.2.0"
+    "coffee-script": "^1.12.7",
+    "mocha": "^3.5.0"
   },
   "peerDependencies": {
     "rightful-hot": "^3.2"
