simplify PouchDB dependencies
prevent compilation of leveldown

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "debug": "^3.0.0",
-    "pouchdb": "6.3.4",
+    "pouchdb-adapter-http": "^6.3.4",
+    "pouchdb-core": "^6.3.4",
     "seem": "^2.0.0"
   },
   "devDependencies": {
