--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.17.2",
     "ccnq4-pouchdb": "^1.0.0",
     "debug": "^3.0.0",
+    "lru": "^3.1.0",
     "seem": "^2.0.0"
   },
   "devDependencies": {
